Refactor camera creation and rendering parameters
- Updated `make_camera` function to accept image dimensions and samples per pixel as parameters for greater flexibility.
- Adjusted default values for samples per pixel and number of spheres in `main.odin` for improved performance.
- Enhanced output file naming in `raytrace.odin` to remove the `.ppm` extension by default.
- Modified test mode functionality to utilize new camera parameters and improved output handling.
- Updated usage instructions in `utils.odin` to reflect new default values.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,16 @@
             "args": [],
             "cwd": "${workspaceFolder}",
             "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
+            "name": "Debug (Test Mode)",
+            "type": "cppdbg",
+            "request": "launch",
+            "preLaunchTask": "build-linux",
+            "program": "${workspaceFolder}/build/debug",
+            "args": ["-t"],
+            "cwd": "${workspaceFolder}",
+            "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
 }
