Enhance parallel rendering with detailed timing and progress control
- Updated `render_parallel` in `camera.odin` to include a `show_progress` parameter for optional progress bar display during rendering.
- Implemented detailed timing breakdowns for various rendering stages, including buffer creation, tile generation, and thread management.
- Modified `ray_trace_world` in `raytrace.odin` to accept the new `show_progress` argument, improving user control over rendering feedback.
- Enhanced argument parsing in `utils.odin` to support disabling the progress bar for performance testing.
- Added detailed performance statistics output to improve rendering diagnostics and analysis.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "request": "launch",
             "preLaunchTask": "build-linux",
             "program": "${workspaceFolder}/build/debug",
-            "args": [],
+            "args": ["--no-progress"],
             "cwd": "${workspaceFolder}",
             "miDebuggerPath": "/usr/bin/gdb"
         },
