Enhance build instructions and add release configurations
Updated README and CLAUDE.md to include detailed build instructions using Makefile for both debug and release configurations. Added new tasks in VSCode for building and running release binaries on both Windows and Linux. Modified camera.odin to conditionally print GPU initialization messages based on the VERBOSE_OUTPUT flag. This improves clarity for users regarding build options and runtime behavior.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -69,6 +69,44 @@
             "args": ["-w", "160", "-h", "90", "-s", "2", "-n", "2", "-c", "2", "-gpu"],
             "cwd": "${workspaceFolder}",
             "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
+            "name": "Release (Linux)",
+            "type": "cppdbg",
+            "request": "launch",
+            "preLaunchTask": "build-linux-release",
+            "program": "${workspaceFolder}/build/release",
+            "args": ["-w", "400", "-h", "225", "-s", "10", "-c", "4"],
+            "cwd": "${workspaceFolder}",
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
+            "name": "Release (Linux) GPU",
+            "type": "cppdbg",
+            "request": "launch",
+            "preLaunchTask": "build-linux-release",
+            "program": "${workspaceFolder}/build/release",
+            "args": ["-w", "400", "-h", "225", "-s", "10", "-c", "4", "-gpu"],
+            "cwd": "${workspaceFolder}",
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
+            "name": "Release (Windows)",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "preLaunchTask": "build-windows-release",
+            "program": "${workspaceFolder}/build/release.exe",
+            "args": ["-w", "400", "-h", "225", "-s", "10", "-c", "4"],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "Release (Windows) GPU",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "preLaunchTask": "build-windows-release",
+            "program": "${workspaceFolder}/build/release.exe",
+            "args": ["-w", "400", "-h", "225", "-s", "10", "-c", "4", "-gpu"],
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
